# chora

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
certs/: client.crt  client.key
config/: topology_config.json  topology_schema.json
docs/readme/: README_TW.md
examples/: mock_server.py
src/: adapters.py  device.py  environment.py  gateway.py  main.py
src/utils/: crypto_helper.py  evaluator.py
thaumio/: adapters.py  device.py  environment.py  gateway.py  main.py
thaumio/utils/: crypto_helper.py  evaluator.py  testcontainers.py
